[gd_scene load_steps=10 format=3 uid="uid://cfqpepeud7y6s"]

[ext_resource type="Script" path="res://Scripts/dialogue.gd" id="1_ne7wx"]
[ext_resource type="Texture2D" uid="uid://br8nvmsg2wo75" path="res://icon.svg" id="1_q8u87"]
[ext_resource type="Texture2D" uid="uid://1cqiv22renjj" path="res://assets/tutorial_assets/Additional_Test_Assets/Frame 28.png" id="3_p8e4f"]
[ext_resource type="Script" path="res://Scripts/3choice_dialogue.gd" id="3_rj2pq"]
[ext_resource type="Shader" path="res://Scene Folder/UI.gdshader" id="4_8evkt"]

[sub_resource type="Gradient" id="Gradient_6hbbo"]
colors = PackedColorArray(0.522046, 0.527665, 0.325254, 1, 0.901493, 0.910416, 0.860156, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_en6ay"]
gradient = SubResource("Gradient_6hbbo")
fill_from = Vector2(0.508547, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0170h"]
gradient = SubResource("Gradient_6hbbo")
fill_from = Vector2(0.508547, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b5k30"]
shader = ExtResource("4_8evkt")
shader_parameter/lod = 2.0

[node name="UI" type="CanvasLayer"]

[node name="Dialogue" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 300.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
script = ExtResource("1_ne7wx")

[node name="PlayerContainer" type="HBoxContainer" parent="Dialogue"]
custom_minimum_size = Vector2(781, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="PositionControl" type="Control" parent="Dialogue/PlayerContainer"]
modulate = Color(0.909804, 0.909804, 0.909804, 1)
layout_mode = 2

[node name="ScaleControl" type="Control" parent="Dialogue/PlayerContainer/PositionControl"]
layout_mode = 2
anchors_preset = 0
offset_left = -4.0
offset_top = 704.0
offset_right = -4.0
offset_bottom = 704.0
scale = Vector2(1.25, 1.25)
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="IconCenter" type="TextureRect" parent="Dialogue/PlayerContainer/PositionControl/ScaleControl"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 128.0
grow_vertical = 0
pivot_offset = Vector2(0, 128)
size_flags_vertical = 8
texture = SubResource("GradientTexture2D_en6ay")

[node name="TextBanner" type="TextureRect" parent="Dialogue/PlayerContainer/PositionControl/ScaleControl/IconCenter"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -128.0
offset_right = 451.0
grow_vertical = 0
pivot_offset = Vector2(0, 128)
size_flags_vertical = 8
texture = SubResource("GradientTexture2D_en6ay")

[node name="Avatar" type="TextureRect" parent="Dialogue/PlayerContainer/PositionControl/ScaleControl/IconCenter"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(64, 64)
size_flags_vertical = 8
texture = ExtResource("1_q8u87")

[node name="MarginContainer" type="MarginContainer" parent="Dialogue/PlayerContainer/PositionControl/ScaleControl"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -123.0
offset_right = 308.0
grow_vertical = 0
pivot_offset = Vector2(0, 123)
size_flags_vertical = 8
theme_override_constants/margin_left = 138
theme_override_constants/margin_bottom = 0

[node name="DialogueText" type="RichTextLabel" parent="Dialogue/PlayerContainer/PositionControl/ScaleControl/MarginContainer"]
clip_contents = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
bbcode_enabled = true
text = "[color=black][b]Godot #1[/b]

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore."
fit_content = true
scroll_active = false

[node name="CharacterContainer" type="HBoxContainer" parent="Dialogue"]
custom_minimum_size = Vector2(521, 0)
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="PositionControl" type="Control" parent="Dialogue/CharacterContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8

[node name="ScaleControl" type="Control" parent="Dialogue/CharacterContainer/PositionControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(1.5, 1.5)

[node name="IconCenter" type="TextureRect" parent="Dialogue/CharacterContainer/PositionControl/ScaleControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -128.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 8
size_flags_vertical = 8
texture = SubResource("GradientTexture2D_0170h")

[node name="TextBanner" type="TextureRect" parent="Dialogue/CharacterContainer/PositionControl/ScaleControl/IconCenter"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -451.0
offset_top = -128.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(0, 128)
size_flags_vertical = 8
texture = SubResource("GradientTexture2D_en6ay")

[node name="Avatar" type="TextureRect" parent="Dialogue/CharacterContainer/PositionControl/ScaleControl/IconCenter"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -112.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.75, 0.75)
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("1_q8u87")

[node name="MarginContainer" type="MarginContainer" parent="Dialogue/CharacterContainer/PositionControl/ScaleControl"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -436.0
offset_top = -115.0
grow_horizontal = 0
grow_vertical = 0
pivot_offset = Vector2(436, 115)
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/margin_right = 136
theme_override_constants/margin_bottom = 8

[node name="DialogueText" type="RichTextLabel" parent="Dialogue/CharacterContainer/PositionControl/ScaleControl/MarginContainer"]
clip_contents = false
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
bbcode_enabled = true
text = "[color=black][b]Fox[/b]

Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. "
fit_content = true
scroll_active = false

[node name="Monologue" type="MarginContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_rj2pq")

[node name="ColorRect" type="ColorRect" parent="Monologue"]
material = SubResource("ShaderMaterial_b5k30")
layout_mode = 2
color = Color(0.576127, 0.621995, 0.792914, 1)

[node name="ChoiceContainer" type="VBoxContainer" parent="Monologue"]
custom_minimum_size = Vector2(1366, 608)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Monologue/ChoiceContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Monologue/ChoiceContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 75
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 100

[node name="ChoiceBounds1" type="TextureRect" parent="Monologue/ChoiceContainer/HBoxContainer/MarginContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("3_p8e4f")
expand_mode = 3

[node name="ScaleControl" type="Control" parent="Monologue/ChoiceContainer/HBoxContainer/MarginContainer/ChoiceBounds1"]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.288
offset_top = -204.0
offset_right = 175.712
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(172, 208)
mouse_filter = 2

[node name="ChoiceTexture1" type="TextureRect" parent="Monologue/ChoiceContainer/HBoxContainer/MarginContainer/ChoiceBounds1/ScaleControl"]
visible = false
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.0
offset_top = -208.5
offset_right = 172.0
offset_bottom = 208.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_p8e4f")

[node name="MonologueText" type="RichTextLabel" parent="Monologue/ChoiceContainer/HBoxContainer/MarginContainer/ChoiceBounds1/ScaleControl/ChoiceTexture1"]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.5
offset_left = -0.742447
offset_top = -57.0
offset_right = -0.742432
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 25
bbcode_enabled = true
text = "[center][color=black][b]This is the first choice a player can choose to make."
fit_content = true
scroll_active = false

[node name="MarginContainer2" type="MarginContainer" parent="Monologue/ChoiceContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 100

[node name="ChoiceBounds2" type="TextureRect" parent="Monologue/ChoiceContainer/HBoxContainer/MarginContainer2"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("3_p8e4f")
expand_mode = 3

[node name="ScaleControl" type="Control" parent="Monologue/ChoiceContainer/HBoxContainer/MarginContainer2/ChoiceBounds2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.288
offset_top = -204.0
offset_right = 175.712
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(172, 208)
mouse_filter = 2

[node name="ChoiceTexture2" type="TextureRect" parent="Monologue/ChoiceContainer/HBoxContainer/MarginContainer2/ChoiceBounds2/ScaleControl"]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.288
offset_top = -204.0
offset_right = 175.712
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_p8e4f")

[node name="MonologueText" type="RichTextLabel" parent="Monologue/ChoiceContainer/HBoxContainer/MarginContainer2/ChoiceBounds2/ScaleControl/ChoiceTexture2"]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -52.5
offset_right = 0.5
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 25
bbcode_enabled = true
text = "[center][color=black][b]This is the second choice a player can choose to make."
fit_content = true
scroll_active = false

[node name="MarginContainer3" type="MarginContainer" parent="Monologue/ChoiceContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 75
theme_override_constants/margin_bottom = 100

[node name="ChoiceBounds3" type="TextureRect" parent="Monologue/ChoiceContainer/HBoxContainer/MarginContainer3"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
texture = ExtResource("3_p8e4f")
expand_mode = 3

[node name="ScaleControl" type="Control" parent="Monologue/ChoiceContainer/HBoxContainer/MarginContainer3/ChoiceBounds3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.288
offset_top = -204.0
offset_right = 175.712
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(172, 208)
mouse_filter = 2

[node name="ChoiceTexture3" type="TextureRect" parent="Monologue/ChoiceContainer/HBoxContainer/MarginContainer3/ChoiceBounds3/ScaleControl"]
visible = false
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.288
offset_top = -204.0
offset_right = 175.712
offset_bottom = 213.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_p8e4f")

[node name="MonologueText" type="RichTextLabel" parent="Monologue/ChoiceContainer/HBoxContainer/MarginContainer3/ChoiceBounds3/ScaleControl/ChoiceTexture3"]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.5
offset_left = 2.96975
offset_top = -52.5
offset_right = 2.96976
offset_bottom = 52.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 25
bbcode_enabled = true
text = "[center][color=black][b]This is the third choice a player can choose to make."
fit_content = true
scroll_active = false

[node name="TextContainer" type="VBoxContainer" parent="Monologue"]
custom_minimum_size = Vector2(1366, 160)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2

[node name="PositionControl" type="Control" parent="Monologue/TextContainer"]
modulate = Color(0.909804, 0.909804, 0.909804, 1)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
mouse_filter = 2

[node name="ScaleControl" type="Control" parent="Monologue/TextContainer/PositionControl"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
scale = Vector2(1.25, 1.25)
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2

[node name="IconCenter" type="TextureRect" parent="Monologue/TextContainer/PositionControl/ScaleControl"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_right = 128.0
offset_bottom = 128.0
grow_vertical = 0
pivot_offset = Vector2(0, 128)
size_flags_vertical = 8
mouse_filter = 2
texture = SubResource("GradientTexture2D_en6ay")

[node name="TextBanner" type="TextureRect" parent="Monologue/TextContainer/PositionControl/ScaleControl/IconCenter"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -64.0
offset_right = 1093.0
offset_bottom = 64.0
grow_vertical = 2
size_flags_vertical = 8
mouse_filter = 2
texture = SubResource("GradientTexture2D_en6ay")
expand_mode = 2

[node name="Avatar" type="TextureRect" parent="Monologue/TextContainer/PositionControl/ScaleControl/IconCenter"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(64, 64)
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("1_q8u87")

[node name="MarginContainer" type="MarginContainer" parent="Monologue/TextContainer/PositionControl/ScaleControl"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_right = 1038.0
offset_bottom = 123.0
grow_vertical = 0
pivot_offset = Vector2(0, 123)
size_flags_vertical = 8
mouse_filter = 2
theme_override_constants/margin_left = 138
theme_override_constants/margin_top = 8

[node name="MonologueText" type="RichTextLabel" parent="Monologue/TextContainer/PositionControl/ScaleControl/MarginContainer"]
clip_contents = false
custom_minimum_size = Vector2(900, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 2
bbcode_enabled = true
text = "[color=black][b]Godot #1[/b]

Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore."
fit_content = true
scroll_active = false

[connection signal="mouse_entered" from="Monologue/ChoiceContainer/HBoxContainer/MarginContainer/ChoiceBounds1" to="Monologue" method="_on_choice_bounds_1_mouse_entered"]
[connection signal="mouse_exited" from="Monologue/ChoiceContainer/HBoxContainer/MarginContainer/ChoiceBounds1" to="Monologue" method="_on_choice_bounds_1_mouse_exited"]
[connection signal="mouse_entered" from="Monologue/ChoiceContainer/HBoxContainer/MarginContainer2/ChoiceBounds2" to="Monologue" method="_on_choice_bounds_2_mouse_entered"]
[connection signal="mouse_exited" from="Monologue/ChoiceContainer/HBoxContainer/MarginContainer2/ChoiceBounds2" to="Monologue" method="_on_choice_bounds_2_mouse_exited"]
[connection signal="mouse_entered" from="Monologue/ChoiceContainer/HBoxContainer/MarginContainer3/ChoiceBounds3" to="Monologue" method="_on_choice_bounds_3_mouse_entered"]
[connection signal="mouse_exited" from="Monologue/ChoiceContainer/HBoxContainer/MarginContainer3/ChoiceBounds3" to="Monologue" method="_on_choice_bounds_3_mouse_exited"]
